src/app/comment/comment.component.scss
.comment {
  &__content {
    background-color: #fff;
    border-radius: 0.5rem;
    padding: .3rem .3rem 1.2rem;
    margin-bottom: .3rem
  }
  &__footer {
    position: relative;
  }
  &__reply {
    position: absolute;
    display: block;
    bottom: .5rem;
    right: .5rem;
    padding: .1rem .4rem;
    border-top: .5px solid transparent;
    border-radius: .4rem;
    &:hover {
      cursor: pointer;
      border-color: rgb(189, 225, 255);
      background-image: linear-gradient(to bottom, rgb(255, 255, 255), rgb(249, 252, 255), rgb(243, 250, 255), rgb(237, 247, 255), rgb(231, 244, 255), rgb(225, 241, 255), rgb(219, 239, 255), rgb(213, 236, 255), rgb(207, 233, 255), rgb(201, 230, 255), rgb(195, 228, 255), rgb(189, 225, 255));
    }
    &-btn {
      text-decoration: none;
      color: rgb(68, 66, 66);
      font-size: .7rem;
    }
  }
}

